--- a/.env
+++ b/.env
@@ -8,3 +8,11 @@ DB_PORT="<<DB_PORT>>"
 # Authentication credentials
 TOKEN_TTL="2000"
 JWT_PRIVATE_KEY="THIS_IS_NOT_SO_SECRET+YOU_SHOULD_DEFINITELY_CHANGE_IT"
+
+# huawei cloud service
+USERNAME = ""
+ACCOUNT_NAME = ""
+PASSWORD = ""
+PROJECT_ID = ""
+PROJECT_NAME = ""
+# ACCESS_KEY = ""
